unpackaged/main/default/objects/ACG_ERS_Case_Priority_Mapping__mdt/ACG_ERS_Case_Priority_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>ERS Case Priority Mapping</label>
    <pluralLabel>ERS Case Priority Mappings</pluralLabel>
</CustomObject>