unpackaged/main/default/objects/ACG_ERS_Case_Priority_Mapping__mdt/fields/ACG_Case_Priority__c.field-meta.xml
<CustomField>
    <fullName>ACG_Case_Priority__c</fullName>
    <label>Case Priority</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Critical</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
                <isActive>false</isActive>
                <label>Normal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>