unpackaged/main/default/objects/ACG_ERS_Case_Priority_Mapping__mdt/fields/ACG_Case_Priority_Mapping_Status__c.field-meta.xml
<CustomField>
    <fullName>ACG_Case_Priority_Mapping_Status__c</fullName>
    <label>Case Priority Mapping Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>