unpackaged/main/default/objects/ACG_ERS_Case_Priority_Mapping__mdt/fields/ACG_Case_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>ACG_Case_Record_Type__c</fullName>
    <label>Case Record Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>ERS</fullName>
                <default>true</default>
                <label>ERS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>