unpackaged/main/default/objects/ACG_ERS_Case_Priority_Mapping__mdt/fields/ACG_Club__c.field-meta.xml
<CustomField>
    <fullName>ACG_Club__c</fullName>
    <label>Club</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
            <value>
                <fullName>AAA Akron Auto Club</fullName>
            </value>
            <value>
                <fullName>AAA Alabama</fullName>
            </value>
            <value>
                <fullName>AAA Alaska</fullName>
            </value>
            <value>
                <fullName>AAA Allegheny</fullName>
            </value>
            <value>
                <fullName>AAA Allied Group, Inc.</fullName>
            </value>
            <value>
                <fullName>AAA Arizona</fullName>
            </value>
            <value>
                <fullName>AAA Auto Club South</fullName>
            </value>
            <value>
                <fullName>AAA Blair County</fullName>
            </value>
            <value>
                <fullName>AAA Blue Grass/Kentucky</fullName>
            </value>
            <value>
                <fullName>AAA Butler County</fullName>
            </value>
            <value>
                <fullName>AAA Carolinas</fullName>
            </value>
            <value>
                <fullName>AAA Central Penn</fullName>
            </value>
            <value>
                <fullName>AAA Central-West Jersey</fullName>
            </value>
            <value>
                <fullName>AAA Cincinnati</fullName>
            </value>
            <value>
                <fullName>AAA Club Partners, Inc.</fullName>
            </value>
            <value>
                <fullName>AAA Colorado</fullName>
            </value>
            <value>
                <fullName>AAA East Central</fullName>
            </value>
            <value>
                <fullName>AAA East Penn</fullName>
            </value>
            <value>
                <fullName>AAA Florida/Louisana/Miss</fullName>
            </value>
            <value>
                <fullName>AAA Hawaii</fullName>
            </value>
            <value>
                <fullName>AAA Hoosier Motor Club</fullName>
            </value>
            <value>
                <fullName>AAA Hudson Valley</fullName>
            </value>
            <value>
                <fullName>AAA Huntingdon County</fullName>
            </value>
            <value>
                <fullName>AAA Iowa</fullName>
            </value>
            <value>
                <fullName>AAA Kansas</fullName>
            </value>
            <value>
                <fullName>AAA Kentucky</fullName>
            </value>
            <value>
                <fullName>AAA Lancaster County</fullName>
            </value>
            <value>
                <fullName>AAA Lehigh Valley</fullName>
            </value>
            <value>
                <fullName>AAA Lewistown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>