unpackaged/main/default/objects/ACG_ERS_Case_Priority_Mapping__mdt/fields/ACG_ERS_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>ACG_ERS_Event_Type__c</fullName>
    <label>ERS Event Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
            <value>
                <fullName>Accident Assist</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Member</fullName>
            </value>
            <value>
                <fullName>RAP</fullName>
            </value>
            <value>
                <fullName>Tow To Go</fullName>
            </value>
            <value>
                <fullName>Dealership</fullName>
            </value>
            <value>
                <fullName>Motor Club</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>