unpackaged/main/default/objects/ACG_ERS_Case_Priority_Mapping__mdt/fields/ACG_Membership_Level__c.field-meta.xml
<CustomField>
    <fullName>ACG_Membership_Level__c</fullName>
    <label>Membership Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Plus</fullName>
            </value>
            <value>
                <fullName>Premier</fullName>
            </value>
            <value>
                <fullName>RV</fullName>
            </value>
            <value>
                <fullName>Plus RV</fullName>
            </value>
            <value>
                <fullName>Premier RV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>