unpackaged/main/default/objects/ACG_ERS_Case_Priority_Mapping__mdt/fields/ACG_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>ACG_Service_Type__c</fullName>
    <label>Service Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
            <value>
                <fullName>Battery</fullName>
            </value>
            <value>
                <fullName>Flat Tire</fullName>
            </value>
            <value>
                <fullName>Fuel</fullName>
            </value>
            <value>
                <fullName>Vehicle Lockout</fullName>
            </value>
            <value>
                <fullName>Locksmith</fullName>
            </value>
            <value>
                <fullName>Tow</fullName>
            </value>
            <value>
                <fullName>Home Lockout</fullName>
            </value>
            <value>
                <fullName>Extrication</fullName>
            </value>
            <value>
                <fullName>Accident</fullName>
                <isActive>false</isActive>
                <label>Accident</label>
            </value>
            <value>
                <fullName>Bicycle</fullName>
                <isActive>false</isActive>
                <label>Bicycle</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>