unpackaged/main/default/objects/ACG_ERS_Case_Priority_Mapping__mdt/fields/Same_Member_in_24_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Same_Member_in_24_Hrs__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If a case was created for the same Member/Customer (Account) in Last 24 Hrs</inlineHelpText>
    <label>Same Member in 24 Hrs</label>
    <type>Checkbox</type>
</CustomField>