unpackaged/main/default/objects/ACG_ERS_Case_Priority_Mapping__mdt/fields/Tow_Request_Reason__c.field-meta.xml
<CustomField>
    <fullName>Tow_Request_Reason__c</fullName>
    <label>Tow Request Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
            <value>
                <fullName>Accident</fullName>
            </value>
            <value>
                <fullName>Alternator</fullName>
            </value>
            <value>
                <fullName>Belt</fullName>
            </value>
            <value>
                <fullName>Brakes</fullName>
            </value>
            <value>
                <fullName>Broken Windshield</fullName>
            </value>
            <value>
                <fullName>Fuel Pump</fullName>
            </value>
            <value>
                <fullName>Fuel Type of Diesel</fullName>
            </value>
            <value>
                <fullName>Fuel Type of Electric</fullName>
            </value>
            <value>
                <fullName>Hose</fullName>
            </value>
            <value>
                <fullName>No Spare Tires</fullName>
            </value>
            <value>
                <fullName>Overheat</fullName>
            </value>
            <value>
                <fullName>Stalled While Driving</fullName>
            </value>
            <value>
                <fullName>Starter</fullName>
            </value>
            <value>
                <fullName>Transmission</fullName>
            </value>
            <value>
                <fullName>Won&#39;t Start</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>