unpackaged/main/default/objects/ACG_ERS_Case_Priority_Mapping__mdt/fields/VIP_Case__c.field-meta.xml
<CustomField>
    <fullName>VIP_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If the Member associated with the Case is a VIP</inlineHelpText>
    <label>VIP Case</label>
    <type>Checkbox</type>
</CustomField>